# govee2mqtt

./: .dockerignore  .gitignore  .rustfmt.toml  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE.MIT  LICENSE.md  README.md  build.rs  docker-compose.yml  example.env  flake.nix  justfile  repository.yaml
.devcontainer/: bootstrap.sh  devcontainer.json
.github/actions/setup-nix/: action.yml
.github/workflows/: addon.yml  build.yml  ci.yml  docker.yml  release.yml
addon/: Dockerfile  README.md  build.yaml  config.yaml  run.sh
addon-edge/: config.yaml
addon/translations/: en.yaml
common/: Dockerfile  build.yaml  run.sh
crates/govee-api/: Cargo.toml
crates/govee-api/src/: ble.rs  cache.rs  env.rs  error.rs  http.rs  lan_api.rs  lib.rs  model.rs  platform_api.rs  temperature.rs  undoc_api.rs
crates/govee-api/src/__k9_snapshots__/platform_api/: platform_api_test_list_devices_2.snap
crates/govee-api/src/__k9_snapshots__/undoc_api/: undoc_api_test_get_device_scenes.snap  undoc_api_test_get_one_click.snap  undoc_api_test_issue36.snap  undoc_api_test_issue_14.snap  undoc_api_test_issue_21.snap
crates/govee-api/src/ble/: codec.rs  common.rs  encryption.rs  family.rs  humidifier.rs  light.rs  mod.rs  projector.rs  socket.rs
crates/govee-api/src/platform_api/: client.rs  mod.rs  wire.rs
crates/govee-api/src/undoc_api/: mod.rs  wire.rs
crates/govee-api/test-data/: undoc-device-list-bff.json  undoc-one-click-action-type.json
dev/: .env.example  README.md  docker-compose.dev.yml
dev/mosquitto/: mosquitto.conf
docs/: ADDON.md  CONFIG.md  DOCKER.md  FAQ.md  LAN.md  PRIVACY.md  SKUS.md
research/mitm/: capture.py
scripts/: build-cross.sh  cliff.toml
src/: main.rs  version_info.rs
src/__k9_snapshots__/undoc_api/: undoc_api_test_get_device_scenes.snap  undoc_api_test_issue_21.snap
src/commands/: ble_control.rs  ble_probe.rs  http_control.rs  lan_control.rs  lan_disco.rs  list.rs  mod.rs  serve.rs  undoc.rs
src/hass_mqtt/: base.rs  button.rs  climate.rs  enumerator.rs  fan.rs  humidifier.rs  instance.rs  light.rs  mod.rs  number.rs  router.rs  scene.rs  select.rs  sensor.rs  switch.rs  topic.rs  work_mode.rs
src/service/: ble.rs  control.rs  coordinator.rs  device.rs  hass.rs  http.rs  info.rs  iot.rs  mod.rs  platform_iot.rs  quirks.rs  state.rs  transport.rs
src/service/iot/: mod.rs  subscriber.rs
ui/: .prettierignore  .prettierrc  eslint.config.js  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
ui/src/: App.svelte  app.css  main.ts
ui/src/lib/: api.ts  base.ts  format.ts  frame-decode.ts  frame-stats.ts  route.svelte.ts  theme.svelte.ts  types.ts  ws.svelte.ts
ui/src/lib/components/: Badge.svelte  CopyableText.svelte  DeviceCard.svelte  DeviceDetail.svelte  DiscoveryView.svelte  Dropdown.svelte  EntitiesPanel.svelte  FrameCard.svelte  FrameInspector.svelte  FrameStream.svelte  FramesView.svelte  HassView.svelte  HexView.svelte  InfoView.svelte  JsonView.svelte  LastSeen.svelte  MacroBar.svelte  OverviewBar.svelte  Pagination.svelte  PayloadView.svelte  SecretField.svelte  Segmented.svelte  SharedBadge.svelte  SourceBadge.svelte  Sparkline.svelte  StatusBadge.svelte  Switch.svelte  TabBar.svelte  ThemeSwitch.svelte  TransportBadge.svelte
ui/src/lib/components/controls/: BrightnessControl.svelte  ColorControl.svelte  ColorTempControl.svelte  PowerControl.svelte  SceneControl.svelte  SliderControl.svelte  SocketOutletControl.svelte
ui/src/lib/transitions/: flash.ts
