[workspace]
members = ["crates/govee-api"]

[package]
name = "govee"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
govee-api = { path = "crates/govee-api" }
tokio = {version="1.50", features=["macros", "rt-multi-thread", "rt", "net", "sync", "time"]}
serde_json = "1.0.149"
serde = {version="1.0.147", features=["derive"]}
anyhow = "1"
log = "0.4"
env_logger = "0.11"
dotenvy = "0.15.7"
color-backtrace = "0.7.1"
chrono = { version = "0.4.44", features = ["serde"] }
chrono-tz = "0.10"
iana-time-zone = "0.1.65"
clap = { version = "4.5.60", features = ["derive"] }
dirs-next = "2.0.0"
rusqlite = {version="0.32.0", features=["bundled"]}
once_cell = "1.21.4"
csscolorparser = "0.8.3"
data-encoding = "2.10.0"
clap-num = "1.1.1"
uuid = { version = "1.22.0", features = ["v4", "v5"] }
uncased = "0.9.9"
openssl = "0.10.76"
p12 = "0.6.3"
axum = "0.8.8"
tower-http = { version = "0.6.7", features = ["fs"] }
async-channel = "2.1.1"
async-trait = "0.1.77"

[dependencies.mosquitto-rs]
version="0.11.1"
features = ["vendored-openssl"]
#path = "../mosquitto-rs/mosquitto-rs"

[dev-dependencies]
anyhow = "1"
k9 = "0.12.0"
