[workspace]
members = ["crates/govee-api"]

[package]
name = "govee2mqtt"
version = "0.1.0"
edition = "2024"

[dependencies]
govee-api = { path = "crates/govee-api" }
tokio = { version = "1.52", features = [
    "macros",
    "rt-multi-thread",
    "rt",
    "net",
    "sync",
    "time",
] }
serde_json = "1.0.150"
serde = { version = "1.0.228", features = ["derive"] }
anyhow = "1"
log = "0.4"
env_logger = "0.11"
dotenvy = "0.15.7"
color-backtrace = "0.7.2"
chrono = { version = "0.4.44", features = ["serde"] }
chrono-tz = "0.10"
iana-time-zone = "0.1.65"
clap = { version = "4.6.1", features = ["derive"] }
dirs-next = "2.0.0"
rusqlite = { version = "0.32.0", features = ["bundled"] }
once_cell = "1.21.4"
csscolorparser = "0.8.3"
data-encoding = "2.11.0"
clap-num = "1.2.0"
uuid = { version = "1.23.1", features = ["v4", "v5"] }
uncased = "0.9.10"
openssl = "0.10.80"
p12 = "0.6.3"
axum = "0.8.9"
tower-http = { version = "0.6.11", features = ["fs"] }
async-channel = "2.5.0"
async-trait = "0.1.89"

[dependencies.mosquitto-rs]
version = "0.11.2"
features = ["vendored-openssl"]
#path = "../mosquitto-rs/mosquitto-rs"

[dev-dependencies]
anyhow = "1"
