[workspace]
members = ["crates/govee-api"]

# release profile is set at the workspace root because cargo ignores
# [profile.*] in member crates. applies to the govee2mqtt bin, govee-api,
# and every transitive dep built for release.
#
# lto = true: full cross-crate inlining; main runtime and binary-size win.
# codegen-units = 1: pairs with lto; slower compile, tighter codegen.
#
# not set: strip (color-backtrace wants symbols for panic traces, and
# debug = false is already the release default) and panic = abort (we'd
# rather a panicking tokio task surface at the JoinHandle than abort the
# whole daemon).
[profile.release]
lto = true
codegen-units = 1

[package]
name = "govee2mqtt"
version = "0.1.0"
edition = "2024"
license = "GPL-3.0-or-later"

[dependencies]
govee-api = { path = "crates/govee-api" }
tokio = { version = "1.52", features = [
    "macros",
    "rt-multi-thread",
    "rt",
    "net",
    "sync",
    "time",
] }
serde_json = "1.0.150"
serde = { version = "1.0.228", features = ["derive"] }
anyhow = "1"
log = "0.4"
env_logger = "0.11"
dotenvy = "0.15.7"
color-backtrace = "0.7.2"
chrono = { version = "0.4.44", features = ["serde"] }
chrono-tz = "0.10"
iana-time-zone = "0.1.65"
clap = { version = "4.6.1", features = ["derive", "env"] }
dirs-next = "2.0.0"
rusqlite = { version = "0.32.0", features = ["bundled"] }
once_cell = "1.21.4"
csscolorparser = "0.8.3"
data-encoding = "2.11.0"
clap-num = "1.2.0"
uuid = { version = "1.23.1", features = ["v4", "v5"] }
uncased = "0.9.10"
pem = "3"
p12 = "0.6.3"
axum = { version = "0.8.9", features = ["ws"] }
async-trait = "0.1.89"
rumqttc = "0.25.1"
thiserror = "2.0.18"
btleplug = "0.12"
futures-util = "0.3"
rust-embed = { version = "8.7", features = ["debug-embed"] }
mime_guess = "2.0"

[dev-dependencies]
anyhow = "1"
