[package]
name = "govee-api"
version = "0.1.0"
edition = "2021"

[lib]
name = "govee_api"

[dependencies]
tokio = { version = "1.50", features = ["macros", "rt", "net", "sync", "time"] }
serde_json = "1.0.149"
serde = { version = "1.0.147", features = ["derive"] }
anyhow = "1"
log = "0.4"
clap = { version = "4.5.60", features = ["derive"] }
dirs-next = "2.0.0"
chrono = { version = "0.4.44", features = ["serde"] }
reqwest = { version = "0.13", features = ["json"] }
sqlite-cache = "0.1.4"
if-addrs = "0.15"
once_cell = "1.21.4"
data-encoding = "2.10.0"
uuid = { version = "1.22.0", features = ["v4", "v5"] }
serde_json_path_to_error = "0.1.4"
strum_macros = "0.28"
strum = { version = "0.28.0", features = ["strum_macros"] }
thiserror = "2.0.18"
arc-swap = "1.8.2"
parking_lot = "0.12.1"

[dev-dependencies]
anyhow = "1"
k9 = "0.12.0"
