[package]
name = "govee-api"
version = "0.1.0"
edition = "2021"

[lib]
name = "govee_api"

[dependencies]
tokio = { version = "1.52", features = ["macros", "rt", "net", "sync", "time"] }
serde_json = "1.0.150"
serde = { version = "1.0.228", features = ["derive"] }
anyhow = "1"
log = "0.4"
clap = { version = "4.6.1", features = ["derive"] }
dirs-next = "2.0.0"
chrono = { version = "0.4.44", features = ["serde"] }
reqwest = { version = "0.13", features = ["json"] }
sqlite-cache = "0.1.4"
rusqlite = { version = "0.32", features = ["bundled"] }
if-addrs = "0.15"
once_cell = "1.21.4"
data-encoding = "2.11.0"
uuid = { version = "1.23.1", features = ["v4", "v5"] }
serde_json_path_to_error = "0.1.5"
strum_macros = "0.28"
strum = { version = "0.28.0", features = ["strum_macros"] }
thiserror = "2.0.18"
arc-swap = "1.9.1"
parking_lot = "0.12.5"

[dev-dependencies]
anyhow = "1"
